# tools-rust

./: .gitignore  .npmignore  Cargo.toml  ava.config.js  index.d.ts  index.js  package-lock.json  package.json  tools-rust.win32-x64-msvc.node
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  uuid.rs
tests/: uuid.spec.ts
