[package]
edition = "2021"
name = "tools-rust"
version = "1.0.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
description = "Rust tools for Node native addon"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.0-alpha.5", default-features = false, features = ["napi4"] }
napi-derive = "2.0.0-alpha.7"
sha2 = "0.9.8"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"

[build-dependencies]
napi-build = "1.1.1"

[profile.release]
lto = true
